--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>IB-QRko-do v4</title>
+<title>IB-QRko-do v5</title>
 
 <style>
 body { font-family: Arial; margin: 0; padding: 20px; background: #fff; color: #000; }
@@ -22,22 +21,50 @@ button { width:100%; padding:14px 0; margin-top:10px; border-radius:10px; border
 
 #qrcode { text-align:center; margin-top:20px; }
 canvas { display:none; }
+
+#updateToast {
+  position: fixed; left:50%; bottom:30px; transform:translateX(-50%);
+  background:#333; color:#fff; padding:12px 20px; border-radius:8px;
+  font-size:16px; display:none; z-index:9999;
+}
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jsqr/1.4.0/jsQR.min.js"></script>
 
 <link rel="manifest" href="manifest.json">
+
 <script>
-if("serviceWorker" in navigator){
-  navigator.serviceWorker.register("service-worker.js");
+// =========================
+// Service Worker 自动更新
+// =========================
+if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+    .then(reg => {
+        reg.onupdatefound = () => {
+            const newSW = reg.installing;
+            newSW.onstatechange = () => {
+                if (newSW.state === "installed" && navigator.serviceWorker.controller) {
+                    showUpdateToast();
+                }
+            };
+        };
+    });
+}
+
+function showUpdateToast(){
+    const t=document.getElementById("updateToast");
+    t.style.display="block";
+    setTimeout(()=>location.reload(),1500);
 }
 </script>
 
 </head>
 
 <body>
-<h2>IB-QRko-do v4（全80項目ラベル復元・二列レイアウト）</h2>
+<h2>IB-QRko-do v5（オフライン・自動更新）</h2>
+
+<div id="updateToast">新しいバージョンを読み込み中…</div>
 
 <div class="container">
 
@@ -48,135 +75,141 @@ if("serviceWorker" in navigator){
 
 <div id="inputs" class="grid"></div>
 
-<button class="btn-main" onclick="generateQR()">QRコード生成</button>
-<button class="btn-second" onclick="downloadQR()">QR画像ダウンロード</button>
-<button class="btn-second" onclick="loadQR()">QR解析（画像読込）</button>
-<button class="btn-second" onclick="saveCSV()">CSV出力</button>
-<button class="btn-danger" onclick="clearAll()">全入力クリア</button>
-
-<div id="qrcode"></div>
-<canvas id="qr-canvas"></canvas>
-
-</div>
-
 <script>
-// ラベルリスト
-const labels = ["定型番号","生産数量","シート長さ","シート幅","シート厚み","長さL","幅B","高さH","糊代","複数(丁付)","ハーフ","O","I ( I1 )","h","T","Max½L(MaxA)","Max½(MaxB)W","予備19","予備20","予備21","予備22","予備23","循環(cycle)","縦断裁数量","横断裁数量","予備25","段違い罫線ON/OFF（0→OFF/1→ON）","段違い罫線の間隔1","段違い罫線の間隔2","L1","L2","L3","L4","L5","L6","L7","L8","L9","L10","L11","L12","L13","L14","L15","L16","W1","W2","W3","W4","W5","W6","W7","W8","W9","iOffsetHeight","iOffsetL1","iOffsetL2","iOffsetL3","iOffsetL4","iOffsetL5","iOffsetL6","iOffsetL7","iOffsetL8","iOffsetL9","iOffsetL10","iOffsetL11","iOffsetL12","iOffsetL13","iOffsetL14","iOffsetL15","iOffsetL16","iOffsetW1","iOffsetW2","iOffsetW3","iOffsetW4","iOffsetW5","iOffsetW6","iOffsetW7","iOffsetW8","iOffsetW9"];
+// =========================
+// 80 个项目字段名称（依然保持你的顺序）
+// =========================
+const labels = [
+"1. 定型番号","2. 生産数量","3. シート長さ","4. シート幅","5. シート厚み",
+"6. 長さL","7. 幅B","8. 高さH","9. 糊代","10. 複数(丁付)",
+"11. ハーフ","12. O","13. I（I1）","14. h","15. T",
+"16. Max½L(MaxA)","17. Max½(MaxB)W","18. 予備19","19. 予備20","20. 予備21",
+"21. 予備22","22. 予備23","23. 予備24","24. 予備25","25. 縦断裁数量",
+"26. 横断裁数量 予備","27. 段違い罫線ON/OFF（0→OFF/1→ON）",
+"28. 罫線間隔1","29. 罫線間隔2","30. L1","31. L2",
+"32. L3","33. L4","34. L5","35. L6","36. L7",
+"37. L8","38. L9","39. L10","40. L11","41. L12",
+"42. L13","43. L14","44. L15","45. L16","46. W1",
+"47. W2","48. W3","49. W4","50. W5","51. W6",
+"52. W7","53. W8","54. W9","55. iOffsetHeight","56. iOffsetL1",
+"57. iOffsetL2","58. iOffsetL3","59. iOffsetL4","60. iOffsetL5","61. iOffsetL6",
+"62. iOffsetL7","63. iOffsetL8","64. iOffsetL9","65. iOffsetL10","66. iOffsetL11",
+"67. iOffsetL12","68. iOffsetL13","69. iOffsetL14","70. iOffsetL15","71. iOffsetL16",
+"72. iOffsetW1","73. iOffsetW2","74. iOffsetW3","75. iOffsetW4","76. iOffsetW5",
+"77. iOffsetW6","78. iOffsetW7","79. iOffsetW8","80. iOffsetW9"
+];
 
+// ------------------------------
+// 初始化输入框
+// ------------------------------
 const container = document.getElementById("inputs");
-
-// 入力欄生成（二列）
-labels.forEach((label,i)=>{
-    container.innerHTML += 
-        "<div class='item'>" +
-        "<label>" + (i+1) + ". " + label + "</label>" +
-        "<input id='input" + i + "' value='" + (localStorage.getItem("qr"+i) || "") + "'>" +
-        "</div>";
+labels.forEach((label, index) => {
+    const item = document.createElement("div");
+    item.className = "item";
+    const id = "f" + (index + 1);
+    item.innerHTML = `<label>${label}</label>
+                      <input id="${id}" type="text">`;
+    container.appendChild(item);
 });
 
-// QR生成（600×600 + タイトル黒地白文字）
+// ------------------------------
+// 自动保存 & 自动恢复
+// ------------------------------
+function saveAll(){
+    labels.forEach((_,i)=>{
+        const id = "f"+(i+1);
+        localStorage.setItem(id, document.getElementById(id).value);
+    });
+    localStorage.setItem("qrTitle", document.getElementById("qrTitle").value);
+}
+
+document.querySelectorAll("input").forEach(inp=>{
+    inp.addEventListener("input", saveAll);
+});
+
+function restore(){
+    labels.forEach((_,i)=>{
+        const id = "f"+(i+1);
+        const v = localStorage.getItem(id);
+        if(v!==null) document.getElementById(id).value = v;
+    });
+    const t = localStorage.getItem("qrTitle");
+    if(t!==null) document.getElementById("qrTitle").value = t;
+}
+restore();
+
+// ------------------------------
+// 生成 QR
+// ------------------------------
 function generateQR(){
-    let vals=[];
-    for(let i=0;i<80;i++){
-        let v=document.getElementById("input"+i).value.trim();
+    let data = [];
+    labels.forEach((_,i)=>{
+        const id="f"+(i+1);
+        let v = document.getElementById(id).value.trim();
         if(v==="") v="0";
-        vals.push(v);
-        localStorage.setItem("qr"+i, v);
-    }
-    const data = vals.join(";");
-    const title=document.getElementById("qrTitle").value || "QRコード";
+        data.push(v);
+    });
 
-    let qr=new QRious({ value:data, size:600, level:"M" });
+    const finalStr = data.join(";");
 
-    let canvas=document.createElement("canvas");
-    let ctx=canvas.getContext("2d");
-    let titleHeight=50;
+    let qr = new QRious({
+        value: finalStr,
+        size: 400,
+        level: "H"
+    });
 
-    canvas.width=600;
-    canvas.height=650;
-
-    ctx.fillStyle="black";
-    ctx.fillRect(0,0,600,titleHeight);
-
-    ctx.fillStyle="white";
-    ctx.font="bold 22px Arial";
-    ctx.textAlign="center";
-    ctx.fillText(title,300,35);
-
-    ctx.drawImage(qr.canvas,0,titleHeight);
-
-    document.getElementById("qrcode").innerHTML =
-        "<img id='finalQR' src='" + canvas.toDataURL("image/png") + "' style='width:300px;'>";
+    document.getElementById("qr-image").src = qr.toDataURL("image/png");
+    document.getElementById("qr-name").innerText =
+        document.getElementById("qrTitle").value || "QR コード";
 }
 
-// 画像保存
-function downloadQR(){
-    let img=document.getElementById("finalQR");
-    if(!img){ alert("先にQRを生成してください"); return; }
-    let a=document.createElement("a");
-    a.href=img.src;
-    a.download="QR.png";
-    a.click();
-}
+// ------------------------------
+// QR 反向解析
+// ------------------------------
+function decodeQR(){
+    const file = document.getElementById("qrFile").files[0];
+    if (!file) return alert("QR画像を選択してください。");
 
-// 全クリア
-function clearAll(){
-    if(!confirm("全て消去しますか？")) return;
-    for(let i=0;i<80;i++){
-        document.getElementById("input"+i).value="";
-        localStorage.removeItem("qr"+i);
-    }
-    document.getElementById("qrcode").innerHTML="";
-}
+    const img = new Image();
+    img.onload = () => {
+        const c = document.createElement("canvas");
+        c.width = img.width;
+        c.height = img.height;
+        const ctx = c.getContext("2d");
+        ctx.drawImage(img, 0, 0);
 
-// CSV出力
-function saveCSV(){
-    let rows=[];
-    for(let i=0;i<80;i++){
-        let v=document.getElementById("input"+i).value||"0";
-        rows.push(labels[i] + "," + v);
-    }
-    let blob=new Blob([rows.join("\n")],{type:"text/csv"});
-    let a=document.createElement("a");
-    a.href=URL.createObjectURL(blob);
-    a.download="qrdata.csv";
-    a.click();
-}
+        const imgData = ctx.getImageData(0,0,c.width,c.height);
+        const code = jsQR(imgData.data, imgData.width, imgData.height);
 
-// QR解析
-function loadQR(){
-    let input=document.createElement("input");
-    input.type="file"; input.accept="image/*";
-    input.onchange=e=>{
-        let file=e.target.files[0];
-        let reader=new FileReader();
-        reader.onload=()=>decodeQR(reader.result);
-        reader.readAsDataURL(file);
-    };
-    input.click();
-}
-
-function decodeQR(dataURL){
-    let img=new Image();
-    img.onload=()=>{
-        let c=document.getElementById("qr-canvas");
-        let ctx=c.getContext("2d");
-        c.width=img.width; c.height=img.height;
-        ctx.drawImage(img,0,0);
-        let d=ctx.getImageData(0,0,c.width,c.height);
-        let code=jsQR(d.data,c.width,c.height);
         if(code){
-            let arr=code.data.split(";");
-            arr.forEach((v,i)=>{
-                if(document.getElementById("input"+i))
-                    document.getElementById("input"+i).value=v;
+            let arr = code.data.split(";");
+
+            labels.forEach((_,i)=>{
+                const id="f"+(i+1);
+                document.getElementById(id).value = arr[i] || "";
             });
-            alert("QR解析成功");
-        } else alert("解析失敗");
+
+            saveAll();
+        }else{
+            alert("QRを解析できませんでした。");
+        }
     };
-    img.src=dataURL;
+    img.src = URL.createObjectURL(file);
 }
 </script>
 
+<!-- 操作按钮 -->
+<button class="btn-main" onclick="generateQR()">QR を生成</button>
+<button class="btn-second" onclick="decodeQR()">QR を解析</button>
+<button class="btn-danger" onclick="localStorage.clear();location.reload();">全てリセット</button>
+
+<div id="qrcode">
+    <h3 id="qr-name"></h3>
+    <img id="qr-image" style="width:300px; margin-top:20px;">
+</div>
+
+<input type="file" id="qrFile" accept="image/*" style="margin-top:20px;">
+
+</div>
 </body>
 </html>
